--- a/wiki/DevFormLocalization.wiki
+++ b/wiki/DevFormLocalization.wiki
@@ -97,7 +97,7 @@ We first need to state precisely what roles may be targetted by localization--by
 the following attribute on the Field class:
 
 {{{
-    _roles = set([
+    _roles = [
         #"bungeni.Admin", # parliament, has all privileges
         "bungeni.Clerk", "bungeni.Speaker", # parliament
         #"bungeni.Owner", # instance
@@ -106,7 +106,7 @@ the following attribute on the Field class:
         #"bungeni.Translator", # parliament
         #"bungeni.Everybody", # all authenticated users, all above roles
         "bungeni.Anybody" # unauthenticated user, anonymous
-    ])
+    ]
 }}}
 
 This set of (uncommented) roles is thus an *explicit subset* of all `bungeni.*` roles defined within the system (that typically are defined in `models/roles.zcml`). 
@@ -220,41 +220,48 @@ To continue with the example above, let's look at what a localized Question desc
 
 The declaration structure follows the same lines as descriptor's Field.localizable. Let's assume that the only localizable (and localized) Fields in this descriptor are the `moved_by` in `view` and `listing` modes and `ministry_submit_date` in `view` mode:
 {{{
+<ui roles="bungeni.Clerk bungeni.Speaker bungeni.MP bungeni.Minister bungeni.Anybody">
+    ...
     <descriptor name="Question">
-        <field name="parliament_id" />
-        <field name="short_name" />
-        <field name="registry_number" />
-        <field name="owner_id">
-            <show modes="view" roles="bungeni.Clerk bungeni.Speaker" />
-            <hide modes="listing" roles="bungeni.Anybody" />
-        </field>
-        <field name="language" />
-        <field name="body_text" />
-        <field name="submission_date" />
-        <field name="status" />
-        <field name="status_date" />
-        <field name="note" />
-        <field name="receive_notification" />
-        <field name="question_number" />
-        <field name="ministry_id" />
-        <field name="approval_date" />
-        <field name="ministry_submit_date">
-            <hide modes="view" />
-        </field>
-        <field name="question_type" />
-        <field name="response_type" />
-        <field name="response_text" />
+        <field name="parliament_id" modes="view edit" localizable="view" />
+        <field name="short_name" modes="view edit add listing" localizable="view listing" />
+        <field name="full_name" modes="view edit add" localizable="view edit add" />
+        <field name="registry_number" modes="view edit" localizable="view" />
+        <field name="owner_id" modes="view edit add listing" localizable="view listing">
+            <hide modes="view listing" roles="bungeni.Anybody" />
+        <field>
+        <field name="language" modes="view edit add" localizable="view" />
+        <field name="body_text" modes="view edit add" localizable="view" />
+        <field name="submission_date" modes="view listing" localizable="view listing" />
+        <field name="status" modes="view edit listing" />
+        <field name="status_date" modes="view listing" localizable="view listing" />
+        <field name="note" modes="edit add" localizable="" />
+        <field name="receive_notification" modes="view edit add" />
+        <field name="question_number" modes="view listing" />
+        <field name="ministry_id" modes="view edit add listing" />
+        <field name="admissible_date" modes="view listing" localizable="view listing" />
+        <field name="ministry_submit_date" modes="view edit" localizable="view">
+            <show modes="view" />
+        <field>
+        <field name="question_type" modes="view edit add" />
+        <field name="response_type" modes="view edit add" />
+        <field name="response_text" modes="edit" />
     </descriptor>
+    ...
+</ui>
 }}}
 The above localization code is:
 
  * setting the field order.
- * stating that the `moved_by` field (+!`owner_id`--the human field name should be used not the underlying attribute name) is being localized to be displayed for Clerk/Speaker in view mode, and to be shown to all except for `bungeni.Anybody` in listing mode. 
+ * stating that the `owner_id` field (+!`Moved by`--the (untranslated) human property title (i18n text id) should probably be used instead of the underlying attribute name) is being localized to be displayed for Clerk/Speaker in view mode, and to be shown to all except for `bungeni.Anybody` in listing mode. 
  * localizing the `ministry_submit_date` Field in `view` mode to not be shown to any role.
 
-Note we specify *all* the fields (those defined in `QuestionDescriptor` as well as those copied off from `ParliamentaryItemDescriptor`)--to change the order we simply... change the order.
+Other remarks about the above localization code sample:
 
-The show and hide directives follow exactly the same logic as in bungeni descriptor.
+ * We specify *all* the fields (those defined in `QuestionDescriptor` as well as those copied off from `ParliamentaryItemDescriptor`)--to change the order we simply... change the order.
+ * The show and hide directives follow exactly the same logic as in bungeni descriptor.
+ * A show/hide that does not specify any roles means it specifies all roles... a show/hide directive that does not specify any roles attribute (or an empty one) is equivalent to specifying the full set of targetted roles i.e. thosse specified as the `@roles` attribute on the `<ui>` root element.
+ * the `field/@modes` and `field/@localizable` attributes are specified (these should typically be automatically generated) for information only, to respectively state the modes a field is displayable and, if any, the modes the filed is localizable in (must be a subset of the field's displayable modes).
 
 As suggested in the requirements, a localization file with all localizable descriptors and their default settings should be automatically generated by bungeni.
 
